Update with support for textproto integration.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     <outputDirectory>${project.build.directory}/classes</outputDirectory>
     <sourceDirectory>java</sourceDirectory>
     <testSourceDirectory>javatests</testSourceDirectory>
+    <resources>
+      <resource>
+        <directory>resources</directory>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
